syntax = "proto3";

package protocol;

import "proto/status.proto";

option go_package = "protocol;protocol";

// 获取所有tag
message GetTagsReq
{
    int64 page_index = 1;
    int64 page_num = 2;
}
message GetTagsResp
{
    Status status = 1;
    map<int64,string> tags = 2;
    int64 page_index = 3;
    int64 page_num = 4;
    int64 total = 5;
}

// 新增Tag
message AddTagReq
{
    string tag = 1;
}
message AddTagResp
{
    Status status = 1;
    bool is_success = 2;
}

// 修改tag
message UpdateTagReq
{
    int64 id = 1;
    string tag = 2;
}
message UpdateTagResp
{
    Status status = 1;
    bool is_success = 2;
}